Chỉnh giao diện

--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -1,4 +1,4 @@
-  body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f0f2f5;
     margin: 0;
@@ -103,6 +103,6 @@
   
   .auth-links a:hover {
     color: #e60040;
-    /* text-decoration: underline; */
+    /* text-decoration: underline;
   }
-  
+*/
